# project-sentinel

./: .dockerignore  .git-commit-msg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.proxy  Dockerfile.worker  LICENSE  PROJECT_BLUEPRINT.md  README.md  RELEASE-v0.2.0.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  publish-all.sh  sentinel.example.yaml  turbo.json  vitest.config.ts
.changeset/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUES/: issue1.md  issue2.md  issue3.md  issue4.md  issue5.md  issue6.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: MARKET_RESEARCH.md  SENTINEL_HUB_BLUEPRINT.md  blog-launch-post.md  operations-guide.md  show-hn-post.md
docs/landing/: index.html
docs/marketing/: devto-post.md  linkedin-producthunt.md  reddit-posts.md  twitter-thread.md
examples/emergency-revocation/: demo.ts  package.json
examples/mcp-with-sentinel/: demo.ts  package.json
examples/two-agent-handshake/: demo.ts  package.json
infra/: main.bicep
infra/modules/: container-app.bicep  container-registry.bicep  keyvault.bicep  postgres.bicep  storage.bicep
infra/scripts/: deploy.sh
python/: README.md  pyproject.toml
python/sentinel_atl/: __init__.py  agent.py  audit.py  client.py  core.py  credentials.py  langchain.py  reputation.py  safety.py
python/sentinel_atl/tests/: __init__.py  test_agent.py  test_core.py  test_credentials.py
specs/: aid-spec-v0.1.md  audit-spec-v0.1.md  handshake-spec-v0.1.md  openapi-v1.0.yaml  reputation-spec-v0.1.md  revocation-spec-v0.1.md  safety-spec-v0.1.md  sentinel-trust-protocol-v1.0.md
